# fastapi-django-template

./: .editorconfig  .flake8  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
app/: .env.example
app/app/: asgi.py  settings.py  urls.py  wsgi.py
app/services/auth/: utils.py
app/services/email/: __init__.py  sender.py
app/services/responses/: __init__.py
app/users/: admin.py  apps.py  models.py  shcemas.py  urls.py  views.py
scripts/: build.sh  start-dev.sh  start.sh
