[tool.poetry]
name = "fastapi-django"
version = "0.1.0"
description = ""
authors = ["emanuelosva <emanuelosva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
fastapi = "^0.61.1"
python-dotenv = "^0.14.0"
uvicorn = "^0.12.0"
python-jose = "^3.2.0"
bcrypt = "^3.2.0"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
mypy = "^0.782"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
