[tool.poetry]
name = "fastapi-django"
version = "0.1.0"
description = ""
authors = ["emanuelosva <emanuelosva@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.1.1"
fastapi = "^0.61.1"
uvicorn = "^0.12.0"
python-jose = "^3.2.0"
python-dotenv = "^0.14.0"
pydantic-django = "^0.0.6"
sendgrid = "^6.4.7"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.3"
black = "^20.8b1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
